kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-api
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: fast-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
